wier/force-app/main/default/objects/COpportunity__c/fields/Last_update_on_Opp__c.field-meta.xml
<CustomField>
    <fullName>Last_update_on_Opp__c</fullName>
    <label>Last update on Opp</label>
    <type>Date</type>
</CustomField>