wier/force-app/main/default/objects/COpportunity__c/fields/Level_of_competition__c.field-meta.xml
<CustomField>
    <fullName>Level_of_competition__c</fullName>
    <label>Level of competition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>