wier/force-app/main/default/objects/COpportunity__c/fields/Management_comment_on_Bid_No_Bid__c.field-meta.xml
<CustomField>
    <fullName>Management_comment_on_Bid_No_Bid__c</fullName>
    <label>Management comment on Bid/No Bid</label>
    <type>TextArea</type>
</CustomField>