wier/force-app/main/default/objects/COpportunity__c/fields/Management_Decision_on_Bid__c.field-meta.xml
<CustomField>
    <fullName>Management_Decision_on_Bid__c</fullName>
    <label>Management Decision on Bid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>