wier/force-app/main/default/objects/COpportunity__c/fields/Market_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Market_Intelligence__c</fullName>
    <formula>IF((ISBLANK( Approvers__c ) &amp;&amp; ISBLANK(  End_User__c ) &amp;&amp; ISBLANK(  Purchaser__c ) &amp;&amp; ISBLANK(  Technical_Authority__c )), &apos;No Market Intelligence&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Intelligence</label>
    <type>Text</type>
</CustomField>