wier/force-app/main/default/objects/COpportunity__c/fields/Movex_CO_No__c.field-meta.xml
<CustomField>
    <fullName>Movex_CO_No__c</fullName>
    <label>ERP CO No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>