wier/force-app/main/default/objects/COpportunity__c/fields/Movex_code__c.field-meta.xml
<CustomField>
    <fullName>Movex_code__c</fullName>
    <formula>Customer__r.Move_X_Code1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP code</label>
    <type>Text</type>
</CustomField>