wier/force-app/main/default/objects/COpportunity__c/fields/My_Team__c.field-meta.xml
<CustomField>
    <fullName>My_Team__c</fullName>
    <formula>IF(( $UserRole.Name  =  Owner:User.Manager.UserRole.Name ), &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team</label>
    <type>Text</type>
</CustomField>