wier/force-app/main/default/objects/COpportunity__c/fields/No_of_PO_attached_del__c.field-meta.xml
<CustomField>
    <fullName>No_of_PO_attached_del__c</fullName>
    <label>No of PO attached</label>
    <summaryForeignKey>PO_Attachments__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>