wier/force-app/main/default/objects/COpportunity__c/fields/No_of_quotes_attached__c.field-meta.xml
<CustomField>
    <fullName>No_of_quotes_attached__c</fullName>
    <label>No of quotes attached</label>
    <summaryForeignKey>Quotation__c.COpportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>