wier/force-app/main/default/objects/COpportunity__c/fields/Opportunity_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Date__c</fullName>
    <label>Opportunity Closed Date</label>
    <type>Date</type>
</CustomField>