wier/force-app/main/default/objects/COpportunity__c/fields/Opportunity_description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_description__c</fullName>
    <label>Opportunity description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>