wier/force-app/main/default/objects/COpportunity__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>RFQ Ref.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>