wier/force-app/main/default/objects/COpportunity__c/fields/Opportunity_source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_source__c</fullName>
    <label>Opportunity source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Customer enquiry</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Customer Visit</fullName>
            </value>
            <value>
                <fullName>Email Enquiry</fullName>
            </value>
            <value>
                <fullName>Installed Base</fullName>
            </value>
            <value>
                <fullName>Frame Agreement</fullName>
            </value>
            <value>
                <fullName>Existing Contract</fullName>
            </value>
            <value>
                <fullName>Trade Show / Exhibition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>