wier/force-app/main/default/objects/COpportunity__c/fields/Order_Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Acknowledged_Date__c</fullName>
    <label>Order Acknowledged Date</label>
    <type>Date</type>
</CustomField>