wier/force-app/main/default/objects/COpportunity__c/fields/OTD__c.field-meta.xml
<CustomField>
    <fullName>OTD__c</fullName>
    <formula>Quote_created_date__c -  Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>