wier/force-app/main/default/objects/COpportunity__c/fields/Other_Costs__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs__c</fullName>
    <label>Other Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>