wier/force-app/main/default/objects/COpportunity__c/fields/OverDue__c.field-meta.xml
<CustomField>
    <fullName>OverDue__c</fullName>
    <formula>IF( Quotation_submittal_date__c &lt; TODAY(), TODAY()- Quotation_submittal_date__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OverDue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>