wier/force-app/main/default/objects/COpportunity__c/fields/Partial_payment_received__c.field-meta.xml
<CustomField>
    <fullName>Partial_payment_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice partly collected</label>
    <type>Checkbox</type>
</CustomField>