wier/force-app/main/default/objects/COpportunity__c/fields/Planning_inform_t_Tendering__c.field-meta.xml
<CustomField>
    <fullName>Planning_inform_t_Tendering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Planning_inform_t_Tendering</description>
    <label>Planning inform toTendering</label>
    <type>Checkbox</type>
</CustomField>