wier/force-app/main/default/objects/COpportunity__c/fields/PO_Approved_by_Contracts_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Approved_by_Contracts_Date__c</fullName>
    <label>PO Approved by Contracts Date</label>
    <type>Date</type>
</CustomField>