wier/force-app/main/default/objects/COpportunity__c/fields/PO_handed_over_to_contract__c.field-meta.xml
<CustomField>
    <fullName>PO_handed_over_to_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO handed over to contract</label>
    <type>Checkbox</type>
</CustomField>