wier/force-app/main/default/objects/COpportunity__c/fields/PO_handed_over_to_Planning_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_handed_over_to_Planning_Date__c</fullName>
    <label>PO handed over to Planning Date</label>
    <type>Date</type>
</CustomField>