wier/force-app/main/default/objects/COpportunity__c/fields/PO_handover_to_contract_date__c.field-meta.xml
<CustomField>
    <fullName>PO_handover_to_contract_date__c</fullName>
    <label>PO handover to contract date</label>
    <type>Date</type>
</CustomField>