wier/force-app/main/default/objects/COpportunity__c/fields/PO_handover_to_planing__c.field-meta.xml
<CustomField>
    <fullName>PO_handover_to_planing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job handed over to Planning</label>
    <type>Checkbox</type>
</CustomField>