wier/force-app/main/default/objects/COpportunity__c/fields/Project_update_comment__c.field-meta.xml
<CustomField>
    <fullName>Project_update_comment__c</fullName>
    <label>Project update/comment by Ian</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>