wier/force-app/main/default/objects/COpportunity__c/fields/Quotation_Approval__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Approval__c</fullName>
    <label>Quotation Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Requires Changes</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>