wier/force-app/main/default/objects/COpportunity__c/fields/Quotation_approval_comments__c.field-meta.xml
<CustomField>
    <fullName>Quotation_approval_comments__c</fullName>
    <label>Comments on quotation approval</label>
    <type>TextArea</type>
</CustomField>