wier/force-app/main/default/objects/COpportunity__c/fields/Quotation_approval_comments_Approval__c.field-meta.xml
<CustomField>
    <fullName>Quotation_approval_comments_Approval__c</fullName>
    <label>Quotation approval comments</label>
    <type>TextArea</type>
</CustomField>