wier/force-app/main/default/objects/COpportunity__c/fields/Quotation_ID__c.field-meta.xml
<CustomField>
    <fullName>Quotation_ID__c</fullName>
    <label>Quotation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>