wier/force-app/main/default/objects/COpportunity__c/fields/Quotation_submission_preference__c.field-meta.xml
<CustomField>
    <fullName>Quotation_submission_preference__c</fullName>
    <label>Submission of quotation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>By CSR</fullName>
            </value>
            <value>
                <fullName>By Tendering</fullName>
                <default>true</default>
                <label>By Tendering</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>