wier/force-app/main/default/objects/COpportunity__c/fields/Quotation_submittal_date__c.field-meta.xml
<CustomField>
    <fullName>Quotation_submittal_date__c</fullName>
    <label>Quotation submittal due date</label>
    <type>Date</type>
</CustomField>