wier/force-app/main/default/objects/COpportunity__c/fields/Quote_approved_date__c.field-meta.xml
<CustomField>
    <fullName>Quote_approved_date__c</fullName>
    <label>Quote approved date</label>
    <type>Date</type>
</CustomField>