wier/force-app/main/default/objects/COpportunity__c/fields/Quote_created_date__c.field-meta.xml
<CustomField>
    <fullName>Quote_created_date__c</fullName>
    <label>Quote created date</label>
    <type>Date</type>
</CustomField>