wier/force-app/main/default/objects/COpportunity__c/fields/Quote_ready_for_Submit__c.field-meta.xml
<CustomField>
    <fullName>Quote_ready_for_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents compiled, ready to submit</label>
    <type>Checkbox</type>
</CustomField>