wier/force-app/main/default/objects/COpportunity__c/fields/Quote_Won__c.field-meta.xml
<CustomField>
    <fullName>Quote_Won__c</fullName>
    <formula>IF((No_of_PO_attached_del__c  &gt; 0  &amp;&amp;  No_of_quotes_attached__c  &gt; 0), &apos;Won&apos;, IF( No_of_quotes_attached__c  &gt; 0, &apos;Quoted&apos;,&apos;&apos;    ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote - Won</label>
    <type>Text</type>
</CustomField>