wier/force-app/main/default/objects/COpportunity__c/fields/Quotes_with_reason_for_lost_quote__c.field-meta.xml
<CustomField>
    <fullName>Quotes_with_reason_for_lost_quote__c</fullName>
    <label>Quotes with reason for lost quote</label>
    <summaryFilterItems>
        <field>Quotation__c.Reason_for_lost_quote_as_per_CSR__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Quotation__c.COpportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>