wier/force-app/main/default/objects/COpportunity__c/fields/Reason_for_lost_quote_as_per_Sales__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_lost_quote_as_per_Sales__c</fullName>
    <label>Reason for lost quote</label>
    <type>TextArea</type>
</CustomField>