wier/force-app/main/default/objects/COpportunity__c/fields/Reason_for_no_bid_recommendation_csr__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_no_bid_recommendation_csr__c</fullName>
    <label>Reason for &quot;no bid&quot; recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Embargo - end destination</fullName>
            </value>
            <value>
                <fullName>Group companies quoted directly</fullName>
            </value>
            <value>
                <fullName>Licensing constraint</fullName>
            </value>
            <value>
                <fullName>Management decision</fullName>
            </value>
            <value>
                <fullName>Missed response due date</fullName>
            </value>
            <value>
                <fullName>Not in our Product Range</fullName>
            </value>
            <value>
                <fullName>Not sufficient details to quote</fullName>
            </value>
            <value>
                <fullName>Suppliers did not respond timely</fullName>
            </value>
            <value>
                <fullName>Supply chain lead time constraint</fullName>
            </value>
            <value>
                <fullName>Technical capability constraint</fullName>
            </value>
            <value>
                <fullName>Workshop capacity constraint</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>