wier/force-app/main/default/objects/COpportunity__c/fields/Reasons_for_Quote_Delay__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Quote_Delay__c</fullName>
    <label>Reasons for Quote Delay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CSR Delayed Processing</fullName>
            </value>
            <value>
                <fullName>Hold - Lack of Data</fullName>
            </value>
            <value>
                <fullName>Hold - No Movex Customer</fullName>
            </value>
            <value>
                <fullName>No Vendor Quote</fullName>
            </value>
            <value>
                <fullName>Operational Issue</fullName>
            </value>
            <value>
                <fullName>TR Delayed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>