wier/force-app/main/default/objects/COpportunity__c/fields/Ref_if_any_in_customer_communication__c.field-meta.xml
<CustomField>
    <fullName>Ref_if_any_in_customer_communication__c</fullName>
    <label>Ref. (if any) in customer communication</label>
    <type>TextArea</type>
</CustomField>