wier/force-app/main/default/objects/COpportunity__c/fields/Revenue_stream__c.field-meta.xml
<CustomField>
    <fullName>Revenue_stream__c</fullName>
    <label>Revenue stream</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Valves 6A</fullName>
            </value>
            <value>
                <fullName>Valves - SSV</fullName>
            </value>
            <value>
                <fullName>Wellhead</fullName>
            </value>
            <value>
                <fullName>Frac-tree</fullName>
            </value>
            <value>
                <fullName>Chokes</fullName>
            </value>
            <value>
                <fullName>Manifolds - Production</fullName>
            </value>
            <value>
                <fullName>OCTG Pup Joints (free issue material)</fullName>
            </value>
            <value>
                <fullName>Crossover &amp; Subs (casing &amp; tubing)</fullName>
            </value>
            <value>
                <fullName>OCTG Plain end threading</fullName>
            </value>
            <value>
                <fullName>Casing and Tubing</fullName>
            </value>
            <value>
                <fullName>Packers</fullName>
            </value>
            <value>
                <fullName>Inspection Service</fullName>
            </value>
            <value>
                <fullName>Connector welding</fullName>
            </value>
            <value>
                <fullName>Drillstem Subs (rotary)</fullName>
            </value>
            <value>
                <fullName>Drill Pipe / Drill Collar</fullName>
            </value>
            <value>
                <fullName>Hard Banding</fullName>
            </value>
            <value>
                <fullName>BHA Repair</fullName>
            </value>
            <value>
                <fullName>Scholler Blackman (DSI)</fullName>
            </value>
            <value>
                <fullName>LES</fullName>
            </value>
            <value>
                <fullName>Other OEM tools</fullName>
            </value>
            <value>
                <fullName>BOP</fullName>
            </value>
            <value>
                <fullName>BOP Control Unit (Koomey)</fullName>
            </value>
            <value>
                <fullName>Pulsation Dampener</fullName>
            </value>
            <value>
                <fullName>API Products</fullName>
            </value>
            <value>
                <fullName>Manifolds - D&amp;C</fullName>
            </value>
            <value>
                <fullName>Flow Iron</fullName>
            </value>
            <value>
                <fullName>SPM Flow Iron</fullName>
            </value>
            <value>
                <fullName>Mathena Products</fullName>
            </value>
            <value>
                <fullName>Novatech Products</fullName>
            </value>
            <value>
                <fullName>Fabrication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>