wier/force-app/main/default/objects/COpportunity__c/fields/RFQ_Record_type__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Record_type__c</fullName>
    <label>RFQ Record type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RFQ  via Email</fullName>
            </value>
            <value>
                <fullName>RFQ without quotation under Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>