wier/force-app/main/default/objects/COpportunity__c/fields/Sales_Comment_for_lost_quote__c.field-meta.xml
<CustomField>
    <fullName>Sales_Comment_for_lost_quote__c</fullName>
    <label>Sales Comment on lost quote</label>
    <type>TextArea</type>
</CustomField>