wier/force-app/main/default/objects/COpportunity__c/fields/Sales_Last_Comment_date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Last_Comment_date__c</fullName>
    <label>Sales Last Comment date</label>
    <type>Date</type>
</CustomField>