wier/force-app/main/default/objects/COpportunity__c/fields/Sales_Person_Latest_comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Latest_comments__c</fullName>
    <label>Latest comments by Sales</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>