wier/force-app/main/default/objects/COpportunity__c/fields/Sales_update__c.field-meta.xml
<CustomField>
    <fullName>Sales_update__c</fullName>
    <formula>TODAY()  -  Sales_Last_Comment_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>