wier/force-app/main/default/objects/COpportunity__c/fields/Saudi_Revenue_Stream__c.field-meta.xml
<CustomField>
    <fullName>Saudi_Revenue_Stream__c</fullName>
    <label>Saudi Revenue Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tubular</fullName>
            </value>
            <value>
                <fullName>V&amp;WH</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Pressure Control</fullName>
                <label>PC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>