wier/force-app/main/default/objects/COpportunity__c/fields/Selling_price_in_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Selling_price_in_Quotation__c</fullName>
    <label>Selling price in Quotation</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>