wier/force-app/main/default/objects/COpportunity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Review</fullName>
            </value>
            <value>
                <fullName>Bid/No Bid</fullName>
            </value>
            <value>
                <fullName>Approved for Tendering</fullName>
            </value>
            <value>
                <fullName>Quotation under compilation</fullName>
            </value>
            <value>
                <fullName>Tender Under Review</fullName>
            </value>
            <value>
                <fullName>Tender Under Approval</fullName>
            </value>
            <value>
                <fullName>Approved, Make Quotation ready for submitial</fullName>
            </value>
            <value>
                <fullName>Quote Ready for Submital</fullName>
            </value>
            <value>
                <fullName>Quote Submitted to Customer</fullName>
            </value>
            <value>
                <fullName>Customer Contacted for Submitted quote</fullName>
            </value>
            <value>
                <fullName>Quotation under clarification with Customer</fullName>
            </value>
            <value>
                <fullName>PO received</fullName>
            </value>
            <value>
                <fullName>PO Under Clarification</fullName>
            </value>
            <value>
                <fullName>PO handed over to Contract</fullName>
            </value>
            <value>
                <fullName>PO under Review with Contract</fullName>
            </value>
            <value>
                <fullName>PO Approved by Contract</fullName>
            </value>
            <value>
                <fullName>Customer order acknowledged</fullName>
            </value>
            <value>
                <fullName>PO handover to Planning</fullName>
            </value>
            <value>
                <fullName>Job handover to Operations</fullName>
            </value>
            <value>
                <fullName>Job done awaiting contracts sign-off</fullName>
            </value>
            <value>
                <fullName>Job ready for Delivery</fullName>
            </value>
            <value>
                <fullName>job delivered</fullName>
            </value>
            <value>
                <fullName>Opportunity closed</fullName>
            </value>
            <value>
                <fullName>Quote accepted but PO awaited</fullName>
            </value>
            <value>
                <fullName>Customer notified of a Completed Job</fullName>
            </value>
            <value>
                <fullName>Invoicing onhold</fullName>
            </value>
            <value>
                <fullName>Job invoiced in movex</fullName>
            </value>
            <value>
                <fullName>Partial Collected</fullName>
            </value>
            <value>
                <fullName>Fully Collected</fullName>
            </value>
            <value>
                <fullName>Invoice sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>